correction style collapse

--- a/src/styles/components/_collapse.scss
+++ b/src/styles/components/_collapse.scss
@@ -30,7 +30,6 @@
     > img {
       width: 20px;
       transition: transform 0.2s ease-in-out;
-      transform: rotate(-90deg);
 
       &.active {
         transform: rotate(180deg);
